# Kiln

./: .gitignore  .gitmodules  .rpmmacros  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Changelog.md  LICENSE  LICENSE.txt  Makefile.toml  README.md  broker-jaas.conf  catalog-info.yaml  client-ssl.properties  docker-compose-auth.yml  docker-compose.yml  gen_certs.sh  install_dev_deps.sh  mkdocs.yml  ssl.cnf  start-local.sh  zookeeper_jaas.conf
.github/: ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  new_connector.md  new_tool.md  tech_debt.md
.github/workflows/: build-docker-images.yml  cargo-audit-workflow.yml  continuous-integration-workflow.yml  pr-labeler.yml  release.yml
.release-keys/: danhatesnumbers.pub  kiln-builder.pub  kiln-package-signer.pub
cli/: Cargo.toml  Makefile.toml  README.md
cli/src/: main.rs
data-collector/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  entrypoint.sh  package.json  serverless.yml
data-collector/docs/: request-response.md
data-collector/src/: lib.rs  main.rs
data-forwarder/: Cargo.toml  Makefile.toml  README.md
data-forwarder/src/: main.rs
docs/: index.md  integration_testing.md  mkdocs.yml  release-process.md  suggested_kafka_deployment.md
docs/data-analysis/: Data Analysis Setup.ipynb  Data Science with Kiln.ipynb  README.md  jupyterhub-values.yml
docs/data-analysis/repo-analyser/: Pipfile  repo-analyser.py
docs/images/: AWS Diagram for Kiln MSK.drawio  Kiln Architecture diagram.drawio  architecture_diagram.puml
docs/quickstart/: README.md  data-collector.yaml  report-parser.yaml  slack-connector.yaml
docs/quickstart/kafka/: Chart.yaml  kafka-values.yaml
docs/quickstart/kafka/templates/: statefulset.yaml
kiln-lib/: Cargo.toml
kiln_lib/: Cargo.toml  README.md  ca-cert
kiln_lib/src/: avro_schema.rs  dependency_event.rs  kafka.rs  lib.rs  log.rs  tool_report.rs  validation.rs
quickstart/: README.md  external-dns.yaml  gen_certs.sh  report-parser.yaml  ssl.cnf  zookeeper-values.yaml
quickstart/kafka/charts/zookeeper/: Chart.yaml
report-parser/: Cargo.toml  Dockerfile  Makefile.toml  README.md  entrypoint.sh
report-parser/src/: 20201105_main.rs  main.rs
slack-connector/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  entrypoint.sh
slack-connector/src/: main.rs
tool-images/javascript/yarn-audit/: Dockerfile  Makefile.toml  entrypoint.sh  entrypoint.sh.bk2
tool-images/python/safety/: Dockerfile  Makefile.toml  entrypoint.sh
tool-images/ruby/bundler-audit/: Dockerfile  Makefile.toml  entrypoint.sh
utils/: Pipfile  release.py
