[package]
name = "kiln-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
shiplift = "0.6"
tokio = "0.1"
futures = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.13"
reqwest = { version = "0.10", features = ["blocking", "json"] }
regex = "1"
