[package]
name = "kiln-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
bollard = "0.6"
tokio = { version = "0.2", features = ["macros", "stream", "rt-threaded"] }
futures = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.15"
reqwest = { version = "0.10", features = ["json"] }
regex = "1"
failure = "0.1"
