[package]
name = "kiln-cli"
version = "0.4.3"
edition = "2018"

[dependencies]
cfg-if = "1"
clap = "2"
bollard = "0.9"
tokio = { version = "1", features = [ "macros", "rt-multi-thread",] }
tokio-stream = "0.1"
futures = "0.3"
toml = "0.5"
serde = { version = "1.0", features = [ "derive",] }
serde_json = "1.0"
indicatif = "0.15"
reqwest = { version = "0.11", features = [ "json",] }
regex = "1"
failure = "0.1"
path-clean = "0.1"
url = "2.2"
http = "0.2"
base64 = "0.13"

[dev-dependencies]
mockall = "0.9"

[target."cfg(target_os = \"linux\")".dependencies]
procfs = "0.9"
