[package]
name = "data-collector"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
actix-web = "2.0"
actix-http = "1.0"
actix-service = "1.0"
actix-rt = "1.0"
bytes = "0.5"
futures = "0.3"
http = "0.1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", branch = "kiln-lib-validation-actix-errors", features = ["web", "avro", "streaming"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
avro-rs = "0.6"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.23", features = ["cmake-build", "ssl-vendored"] }
slog = { version = "2.5", features = ["nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
slog-async = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2"
erased-serde = "0.3"

[dev-dependencies]
serial_test = "0.1"
serial_test_derive = "0.1"
