[package]
name = "data-collector"
version = "0.4.3"
edition = "2018"

[dependencies]
chrono = "0.4"
actix-web = "4.0.0-beta.3"
actix-http = "2"
actix-service = "2.0.0-beta.4"
actix-rt = "2"
anyhow = "1"
thiserror = "1"
bytes = "1"
futures = "0.3"
http = "0.2"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", features = [ "web", "avro", "streaming", "log",], branch = "main" }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive",] }
avro-rs = "0.13"
tokio = { version = "1", features = [ "full",] }
rdkafka = { version = "0.25", features = [ "cmake-build", "ssl-vendored",] }
slog = { version = "2.5", features = [ "nested-values",] }
slog-async = { version = "2.5", features = [ "nested-values",] }
slog_derive = "0.2"
erased-serde = "0.3"
uuid = { version = "0.8", features = [ "serde", "v4",] }

[dev-dependencies]
serial_test = "0.5"
serial_test_derive = "0.5"
