[package]
name = "data-forwarder"
version = "0.4.2"
edition = "2018"

[dependencies]
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", features = [ "json", "toml",], rev = "f1ba6e0c6fbea3c8bf2bd300a2d3086afe7b3e70" }
clap = "2"
chrono = "0.4"
reqwest = "0.9"
git2 = "0.10"
uuid = { version = "0.8", features = [ "v4",] }
openssl-probe = "0.1.2"
toml = "0.5"
retry = "1"
failure = "0.1"
