[package]
name = "data-forwarder"
version = "0.4.3"
edition = "2018"

[dependencies]
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", features = [ "json", "toml",], rev = "506ac9502f3c9ce5e353beb97ff8af4828e8e378" }
clap = "2"
chrono = "0.4"
reqwest = { version = "0.11", features = [ "blocking", "json",] }
git2 = "0.13"
uuid = { version = "0.8", features = [ "v4",] }
openssl-probe = "0.1.2"
toml = "0.5"
retry = "1"
failure = "0.1"
