[package]
name = "kiln_lib"
version = "0.3.2"
edition = "2018"

[dependencies]
avro-rs = { version = "0.6", optional = true }
chrono = { version = "0.4", features = ["serde"] }
actix-web = { version = "2.0", optional = true }
hex = { version = "0.4", features = ["serde"] }
http = { version = "0.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
failure = "0.1"
rdkafka = { version = "0.23", optional = true, features = ["cmake-build", "ssl-vendored"] }
ring = { version = "0.16",features = ["std"] }
addr = { version = "0.2", optional = true }
url = "2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
toml_crate = { version = "0.5", package = "toml", optional = true }
openssl-probe = "0.1"
json_dotpath = { version = "1", optional = true }
slog = { version = "2.5", features = ["nested-values"], optional = true }

[features]

default = []
all = ["avro", "web", "json", "streaming", "toml", "log"]
avro = ["avro-rs"]
json = ["serde_json"]
web = ["actix-web", "http", "json", "log"]
streaming = ["addr", "rdkafka"]
toml = ["toml_crate"]
log = ["json_dotpath", "slog"]

[dev-dependencies]
slog-async = "2"
