[package]
name = "kiln_lib"
version = "0.4.3"
edition = "2018"

[dependencies]
anyhow = "1"
avro-rs = { version = "0.13", optional = true }
chrono = { version = "0.4", features = [ "serde",] }
actix-web = { version = "4.0.0-beta.4", optional = true }
hex = { version = "0.4", features = [ "serde",] }
http = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = [ "derive",] }
regex = "1.0"
rdkafka = { version = "0.25", optional = true, features = [ "cmake-build", "ssl-vendored",] }
ring = { version = "0.16", features = [ "std",] }
addr = { version = "0.13", optional = true }
url = "2.1"
uuid = { version = "0.8", features = [ "serde", "v4",] }
toml_crate = { version = "0.5", package = "toml", optional = true }
openssl-probe = "0.1"
json_dotpath = { version = "1", optional = true }
slog = { version = "2.5", features = [ "nested-values",], optional = true }
thiserror = "1"

[features]
default = []
all = [ "avro", "web", "json", "streaming", "toml", "log",]
avro = [ "avro-rs",]
json = [ "serde_json",]
web = [ "actix-web", "http", "json", "log",]
streaming = [ "addr", "rdkafka",]
toml = [ "toml_crate",]
log = [ "json_dotpath", "slog",]

[dev-dependencies]
slog-async = "2"
tokio = { version = "1", features = ["rt", "macros",] }
