[package]
name = "report-parser"
version = "0.2.0"
edition = "2018"

[dependencies]
avro-rs = "0.6"
failure = "0.1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", branch = "main", features = ["avro", "streaming"] }
regex = "1"
lazy_static = "1"
uuid = { version = "0.8", features = ["v4"] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking"] }
chrono = "0.4"
flate2 = "1"
data-encoding = "2"
ring = { version = "0.16", features = ["std"] }
url = "2"
iter-read = "0.2"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.23", features = ["cmake-build", "ssl-vendored"] }
futures-util = "0.3"
hex = "0.4"
slog = { version = "2.5", features = ["nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
slog-async = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2"
erased-serde = "0.3"
