[package]
name = "report-parser"
version = "0.5.0"
edition = "2018"

[dependencies]
avro-rs = "0.13"
failure = "0.1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", features = [ "avro", "streaming", "json", "log",], rev = "506ac9502f3c9ce5e353beb97ff8af4828e8e378" }
regex = "1"
lazy_static = "1"
uuid = { version = "0.8", features = [ "v4",] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = [ "blocking",] }
chrono = "0.4"
flate2 = "1"
data-encoding = "2"
ring = { version = "0.16", features = [ "std",] }
url = "2"
iter-read = "0.3"
tokio = { version = "1", features = [ "full",] }
rdkafka = { version = "0.26", features = [ "cmake-build", "ssl-vendored",] }
futures-util = "0.3"
hex = "0.4"
slog = { version = "2.5", features = [ "nested-values",] }
slog-async = { version = "2.5", features = [ "nested-values",] }
slog_derive = "0.2"
erased-serde = "0.3"
compressed_string = "1"
httpmock = "0.5"
