[package]
name = "slack-connector"
version = "0.1.0"
edition = "2018"

[dependencies]
avro-rs = "0.6"
bytes = "0.5"
failure = "0.1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", branch = "master", features = ["avro", "streaming"] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
url = "2"
log = "0.4"
env_logger = "0.7"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.23", features = ["cmake-build", "ssl-vendored"] }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
futures-timer = "3"
