[package]
name = "slack-connector"
version = "0.3.2"
edition = "2018"

[dependencies]
avro-rs = "0.6"
bytes = "0.5"
failure = "0.1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", rev = "d2d13a54e212e67c6b8ec255cb05d87557843d1f", features = ["avro", "streaming", "json", "log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
url = "2"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.23", features = ["cmake-build", "ssl-vendored"] }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
futures-timer = "3"
slog = { version = "2.5", features = ["nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
slog-async = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2"
erased-serde = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
