[package]
name = "slack-connector"
version = "0.5.0"
edition = "2018"

[dependencies]
avro-rs = "0.13"
anyhow = "1"
thiserror = "1"
bytes = "1"
kiln_lib = { git = "https://github.com/simplybusiness/Kiln", features = [ "avro", "streaming", "json", "log",], branch = "main" }
serde = { version = "1.0", features = [ "derive",] }
serde_json = "1"
reqwest = { version = "0.11", features = [ "json",] }
url = "2"
tokio = { version = "1", features = [ "full",] }
rdkafka = { version = "0.26", features = [ "cmake-build", "ssl-vendored",] }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = [ "serde",] }
futures-timer = "3"
slog = { version = "2.5", features = [ "nested-values",] }
slog-json = { version = "2.3", features = [ "nested-values",] }
slog-async = { version = "2.5", features = [ "nested-values",] }
slog_derive = "0.2"
erased-serde = "0.3"
uuid = { version = "0.8", features = [ "v4",] }
chrono = "0.4"
